# alfred

./: .gitignore  ARCHITECTURE.md  PLAN.md  README.md  create_dev_folders.sh  createfiles.sh  migrate_to_uv.sh  pyproject.toml  requirements.txt  update_gitignore.sh
scripts/: init_alfred.py  test_utils.py
src/: __init__.py  config.py  main.py
src/utils/: README.md  __init__.py  formatters.py  helpers.py  validators.py
